--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="btn-box">
-                <a href="./kuldeep chauhan.pdf" class="btn">Download CV</a>
+                <a href="kuldeep chauhan.pdf" class="btn">Download CV</a>
                 <a href="https://www.linkedin.com/in/kuldeep-chauhan-1150511ba/" class="btn">Hire Me Now</a>
 
             </div>
@@ -87,7 +87,7 @@
 
         <div class="home-image scroll-scale">
             <div class="img-box">
-                <img src="img/man3.png" alt="" />
+                <img src="man3.png" alt="" />
             </div>
 
 
@@ -147,7 +147,7 @@
 
     <section id="about" class="about">
         <div class="img-about scroll-scale">
-            <img src="img/about-me-pic2.png" alt="">
+            <img src="about-me-pic2.png" alt="">
             <div class="info-about1">
                 <span>1+</span>
                 <p>years of Experience </p>
