--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <div class="portfolio-gallery scroll-bottom">
                 <div class="port-box mix product">
                     <div class="port-image">
-                        <img src="img/1.jpg" alt="">
+                        <img src="1.jpg" alt="">
                     </div>
                     <div class="port-content">
                         <h3>Banking Automation</h3>
