--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="btn-box">
-                <a href="kuldeep chauhan.pdf" class="btn">Download CV</a>
+                <a href="Kuldeep Chauhan.pdf" class="btn">Download CV</a>
                 <a href="https://www.linkedin.com/in/kuldeep-chauhan-1150511ba/" class="btn">Hire Me Now</a>
 
             </div>
@@ -73,7 +73,7 @@
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/kuldeep-chauhan-1150511ba/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/kuldeepchauhan9238722"><i class="bx bxl-github"></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="https://twitter.com/kuldeepchauha9"><i class='bx bxl-twitter'></i></a>
                 <!-- <a href="#"><i class='bx bxl-instagram'></i></a> -->
 
                 <a href="#"><i class='bx bxl-dribbble'></i></a>
